--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.9"
+    "vite": "^3.0.9",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "scss": "^0.2.4"
   }
 }
